Models adicionados, tbl_pulseiras => kajukids

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,7 +10,7 @@
             </a>
         </div>
     </div>
-    <div class="row">
+    <div class="row table-responsive">
         <table class="table table__pulseiras">
             <thead>
               <tr>
