Acrescentando banner, Evolução do ADMIN

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,15 @@
 <%- include("partials/header") %>
 <div class="deals">
     <div class="container deals">
-        <h1 class="deals__titulo_acamp">ACAMP</h1>
-        <H3 class="deals__subtitulo">É PROIBIDO FICAR PARADO!</H3>
+        <div class="row">
+            <div class="col-md-4 banner_titulo">
+                <h1 class="deals__titulo_acamp">ACAMP</h1>
+                <h3 class="deals__subtitulo">É PROIBIDO FICAR PARADO</h3>
+            </div>
+            <div class="col-md-8 banner">
+                <img class="deals__banner__hero" src="img/banner/Acamp 2023.PNG" alt="TEMA 2023: É PROIBIDO FICAR PARADO!">
+            </div>
+        </div>
     </div>
 </div>
 <div class="deals_info">
