--- a/public/style/style.css
+++ b/public/style/style.css
@@ -2,6 +2,10 @@
     background-color: black;
 }
 
+.titulo__logo {
+    display: flex;
+}
+
 .deals {
     background-color: black;
     min-height: 400px;
@@ -11,13 +15,32 @@
     justify-content: center;
 }
 
+.deals__banner__hero {
+    width: 100%;
+    max-width: 600px;
+}
+
+.banner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 .deals__titulo_acamp {
-    font-size: 10em;
-    padding-top: 150px;
+    font-size: 8em;
+    padding-top: 10px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.banner_titulo {
+    display: none;
 }
 
 .deals__subtitulo {
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 .deals_info {
@@ -44,14 +67,26 @@ h3 {
     .deals__subtitulo {
         font-size: 0.8em;
     }
+    .banner_titulo {
+        display: block;
+    }
+    .banner {
+        display: none;
+    }
  }
 
  @media (max-width:350px) { 
     .deals__titulo_acamp {
         font-size: 3em;
-    }
+     }
     .deals__subtitulo {
         font-size: 0.5em;
+     }
+    .banner_titulo {
+        display: block;
+    }
+    .banner {
+        display: none;
     }
  }
 
