--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,6 +10,14 @@
             </a>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Adicionar
+            </button>
+        </div>
+    </div>
     <div class="row table-responsive">
         <table class="table table__pulseiras">
             <thead>
@@ -39,9 +47,31 @@
                     <td scope="col"><%=p.valor_pago%></td>
                     <td scope="col"><%=p.status%></td>
                     <td scope="col"><%=p.forma_cadastro%></td>
+                    <td id="<%=p.id%>">
+                        <button type="button" class="btn btn-primary">i</button>
+                    </td>
                   </tr>    
             <%})%>
             </tbody>
           </table>
     </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
