--- a/views/inscricoes.ejs
+++ b/views/inscricoes.ejs
@@ -21,7 +21,7 @@
                   <li>Fim: 15 DE SET DE 2023</li>
                   <li>DISPONIVEL</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary ">GARANTA O SEU!</button>
+                <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">GARANTA O SEU!</button>
               </div>
             </div>
           </div>
@@ -110,4 +110,52 @@
           </table>
         </div>
       </main>
+
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Faça sua inscição</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form>
+            <div class="modal-body">
+                <div class="mb-3">
+                  <select class="form-select" aria-label="Default select example" onchange="selecionarIgreja(this.value)">
+                    <option value="" selected>Selecione a sua igreja</option>
+                    <option value="0">IBC Teresina</option>
+                    <option value="1">IBC Timon</option>
+                    <option value="2">IBC Picos</option>
+                    <option value="3">IBC Campos sales</option>
+                    <option value="3">IBC Araripina</option>
+                    <option value="3">IBC Pio IX</option>
+                    <option value="3">IBC Caxias</option>
+                  </select>
+                </div>
+                <input type="hidden" value="3" id="qtde">
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Informe seu nome</label>
+                  <input type="text" class="form-control" id="nome" nome="nome" placeholder="nome">
+                <div class="mb-3">
+                  <label for="sobrenome" class="form-label">Informe seu sobre nome</label>
+                  <input type="text" class="form-control" id="sobrenome" nome="sobrenome" placeholder="Sobrenome">
+                </div>
+                <div class="mb-3">
+                  <label for="total">Total a pagar</label>
+                  <input type="number" disabled class="form-control" placeholder="Total a pagar" id="total">
+                </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+              <button type="button" class="btn btn-primary" onclick="irparaopagamento()" id="buttonPagamento" disabled>Ir para o pagamento</button>
+            </div>
+          </form>
+          </div>
+        </div>
+      </div>
     </body>
