--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
+<%- include("conexoes/top")%>
 <%- include("head")%>
-
-    <header class="top__bar">
+<header class="top__bar">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="/">
