LOGIN - API PAGAMENTOS - HOOK PAGAMENTOS

--- a/views/informacoes.ejs
+++ b/views/informacoes.ejs
@@ -157,6 +157,4 @@
     
     </main>
     </body>
-
-<%- include("partials/conexoes/endBody") %>
-<%- include("partials/conexoes/endHtml") %>
+    <%- include("partials/end.ejs") %>
