--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,9 @@
-<%- include("conexoes/top")%>
-<%- include("head")%>
+<%- include("head.ejs")%>
 <header class="top__bar">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="/">
-                    <img src="img/logoIbc.png" width="80px" height="80px" alt="">
+                    <img src="/img/logoIbc.png" width="80px" height="80px" alt="">
                     <p class="titulo__logo">ACAMP 2023</p>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,6 +15,7 @@
                     <a class="nav-item nav-link" href="/programacao">Programação</a>
                     <a class="nav-item nav-link" href="/informacoes">Informações</a>
                     <a class="nav-item nav-link" href="/inscricoes">Inscrições</a>
+                    <a class="nav-item nav-link" href="/login">Acesso</a>
                     </div>
                 </div>
             </nav>
