--- a/views/programacoes.ejs
+++ b/views/programacoes.ejs
@@ -4,5 +4,4 @@
         <h1>Veja a programação!</h1>
     </div>
 </div>
-<%- include("partials/conexoes/endBody") %>
-<%- include("partials/conexoes/endHtml") %>
+<%- include("partials/end.ejs") %>
