--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,5 +1,4 @@
-<%- include("partials/conexoes/top")%>
-<%- include("partials/headAdmin") %>
+<%- include("partials/head.ejs") %>
 <div class="container">
     <div class="row admin__titulo">
         <div class="col-md-8" id="titulo">
@@ -120,5 +119,4 @@
   </div>
 </div>
 
-<%- include("partials/conexoes/endBody") %>
-<%- include("partials/conexoes/endHtml") %>
+<%- include("partials/end.ejs") %>
