--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,5 +34,4 @@
     </div>
 </div>
 
-<%- include("partials/conexoes/endBody") %>
-<%- include("partials/conexoes/endHtml") %>
+<%- include("partials/end.ejs") %>
