--- a/views/partials/headAdmin.ejs
+++ b/views/partials/headAdmin.ejs
@@ -1,3 +1,3 @@
-    <script src="js/admin/scadmin.js" defer="defer"></script>
+    <script src="/js/admin/scadmin.js" defer="defer"></script>
 </head>
 <body>
