--- a/views/partials/headAdmin.ejs
+++ b/views/partials/headAdmin.ejs
@@ -1,4 +1,5 @@
 <%- include("head.ejs")%>
     <script src="/js/admin/scadmin.js" defer="defer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 </head>
 <body>
