--- a/views/inscricoes/index.ejs
+++ b/views/inscricoes/index.ejs
@@ -21,7 +21,7 @@
                   <li>Fim: 15 DE SET DE 2023</li>
                   <li>DISPONIVEL</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">GARANTA O SEU!</button>
+                <button type="button" onclick="handleShowModal()" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">GARANTA O SEU!</button>
               </div>
             </div>
           </div>
