--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,5 +1,6 @@
 <%- include("./toast.ejs")%>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/js/script.js"></script>
 <script src="/js/toastRetorno.js"></script>
 <script src="/js/submit.js"></script>
