--- a/views/sucesso.ejs
+++ b/views/sucesso.ejs
@@ -9,7 +9,7 @@
                         <div class="card my-3">
                             <div class="card-header bg-primary text-white d-flex justify-content-between">
                                 <h5 class="fw-bolder mt-1 align-middle">Pulseiras</h5>
-                                <a target="_blank" href="/impressao/?referenceId=<%=pagamento.referenceId%>" class="btn btn-dark">Imprimir</a>
+                                <a target="_blank" href="/impressao/?referenceId=<%=pagamento.reference_id%>" class="btn btn-dark">Imprimir</a>
                             </div>
                             <div class="card-body">
                                 <div class="table-responsive">
