--- a/views/sucesso.ejs
+++ b/views/sucesso.ejs
@@ -20,6 +20,7 @@
                                                 <th>Nome</th>
                                                 <th>Tipo</th>
                                                 <th>Valor</th>
+                                                <th>Valor Pago</th>
                                                 <th>Status</th>
                                             </tr>
                                         </thead>
@@ -30,10 +31,16 @@
                                                     <td><%= pulseira.nome %> <%= pulseira.sobrenome %></td>
                                                     <td><%= pulseira.isMeia ? 'Meia' : 'Inteira' %></td>
                                                     <td>R$ <%= parseFloat(pulseira.valor_pulseira).toFixed(2) %></td>
+                                                    <td>R$ <%=parseFloat(pulseira.valor_pago).toFixed(2)%>
                                                     <td><%= pulseira.status %></td>
                                                 </tr>
                                             <% }); %>
                                         </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <th colspan="6">Pago dia: <%=pagamento.char_createdAt%> - <%=pagamento.char_payment_installments%>X de R$ <%=pagamento.valor_parcela%> - Metodo: <%=pagamento.char_payment_type%></th>
+                                            </tr>
+                                        </tfoot>
                                     </table>
                                 </div>
                             </div>
