--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
     <div class="container info__deals">
         <div class="row">
             <div class="col-md-4 info__texto__deals info__calendario">
-                <a href="/programacao"><img class="deals__img" src="img/icones/agenda.png" alt=""></a>
+                <a href="/informacoes"><img class="deals__img" src="img/icones/agenda.png" alt=""></a>
                 <h3>C A L E N D A R I O</h3>
                 <P>O Acamp desse ano vai acontecer nos dias 01, 02 e 03 de Dezembro.</P>
             </div>
