--- a/views/inscricoes/index.ejs
+++ b/views/inscricoes/index.ejs
@@ -17,8 +17,8 @@
                 <h1 class="card-title pricing-card-title">R$ 140,00<small class="text-muted fw-light"></small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>L I M I T A D O</li>
-                  <li>Inicio: 15 DE AGO DE 2023</li>
-                  <li>Fim: 15 DE SET DE 2023</li>
+                  <li>Inicio: 01 DE SET DE 2023</li>
+                  <li>Fim: 30 DE SET DE 2023</li>
                   <li>DISPONIVEL</li>
                 </ul>
                 <button type="button" onclick="handleShowModal()" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">GARANTA O SEU!</button>
@@ -34,8 +34,8 @@
                 <h1 class="card-title pricing-card-title">R$ 150,00<small class="text-muted fw-light"></small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>LIMITADO</li>
-                  <li>Inicio: 15 DE SET DE 2023</li>
-                  <li>Fim: 15 DE OUT DE 2023</li>
+                  <li>Inicio: 01 DE OUT DE 2023</li>
+                  <li>Fim: 31 DE OUT DE 2023</li>
                   <li>INDISPONIVEL</li>
                 </ul>
                 <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">EM BREVE!</button>
@@ -51,8 +51,8 @@
                 <h1 class="card-title pricing-card-title">R$ 160,00<small class="text-muted fw-light"></small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
                     <li>LIMITADO</li>
-                    <li>Inicio: 15 DE OUT DE 2023</li>
-                    <li>Fim: 01 DE DEZ DE 2023</li>
+                    <li>Inicio: 01 DE NOV DE 2023</li>
+                    <li>Fim: 30 DE NOV DE 2023</li>
                     <li>INDISPONIVEL</li>
                 </ul>
                 <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">EM BREVE!</button>
