--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,13 +6,12 @@
                     <img src="/img/logoIbc.png" width="80px" height="80px" alt="">
                     <p class="titulo__logo">ACAMP 2023</p>
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-end" id="menu">
                     <div class="navbar-nav">
                     <a class="nav-item nav-link" href="/">Home</a>
-                    <a class="nav-item nav-link" href="/programacao">Programação</a>
                     <a class="nav-item nav-link" href="/informacoes">Informações</a>
                     <a class="nav-item nav-link" href="/inscricoes">Inscrições</a>
                     <a class="nav-item nav-link" href="/login">Acesso</a>
