--- a/views/informacoes.ejs
+++ b/views/informacoes.ejs
@@ -25,8 +25,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+                <img src="img/Carousel/2019.jpg" alt="">
                 <div class="card-body">
                   <p class="card-text">Acamp Intense Fire.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -39,8 +38,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+                <img src="img/Carousel/2019.1.jpg" alt="">
                 <div class="card-body">
                   <p class="card-text">Acamp Intense Fire.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -53,8 +51,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+                <img src="img/Carousel/2019.2.jpg" alt="">
                 <div class="card-body">
                   <p class="card-text">Acamp Intense Fire.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -68,8 +65,7 @@
     
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+                <img src="img/Carousel/2021.jpg" alt="">
                 <div class="card-body">
                   <p class="card-text">Acamp In-fire.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -82,8 +78,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+                <img src="img/Carousel/2021.1.jpg" alt="">    
                 <div class="card-body">
                   <p class="card-text">Acamp In-fire.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -96,8 +91,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-    
+                <img src="img/Carousel/2021.2.jpg" alt="">
                 <div class="card-body">
                   <p class="card-text">Acamp In-fire.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -111,7 +105,7 @@
     
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg> 
+                <img src="img/Carousel/2022.jpg" alt="">
                 <div class="card-body">
                   <p class="card-text">Acamp Até os confins da terra.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -124,7 +118,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                <img src="img/Carousel/2022.1.jpg" alt="">
                 <div class="card-body">
                   <p class="card-text">Acamp Até os confins da terra.</p>
                   <div class="d-flex justify-content-between align-items-center">
@@ -137,9 +131,8 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="public/img/Carousel/2019_1.jpg" alt="">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" fill="public/img/Carousel/2019_1.jpg" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                  <title>Placeholder</title>
+                <img src="img/Carousel/2022.2.jpg" alt="">
+                <title>Placeholder</title>
                 </svg>
                 <div class="card-body">
                   <p class="card-text">Acamp Até os confins da terra.</p>
