--- a/views/programacoes.ejs
+++ b/views/programacoes.ejs
@@ -1,7 +1,70 @@
 <%- include("partials/header") %>
 <div class="container">
-    <div class="row">
-        <h1>Veja a programação!</h1>
-    </div>
+        <main>
+            <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+              <div class="col-md-5 p-lg-5 mx-auto my-5">
+                <h1 class="display-4 fw-normal">Save the date</h1>
+                <p class="lead fw-normal">O Acamp tem marcado nossas gerações. E em 2023 não será diferente; prepare-se para viver dias extraordinários!</p>
+            </div>
+              <div class="product-device shadow-sm d-none d-md-block"></div>
+              <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+            </div>
+            <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+              <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+                <div class="my-3 py-3">
+                  <h2 class="display-5">Pastor Jundy</h2>
+                  <p class="lead">IBC - Tenda</p>
+                </div>
+                <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+              </div>
+              <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+                <div class="my-3 p-3">
+                  <h2 class="display-5">Aposto Antonio</h2>
+                  <p class="lead">IBC -Teresina</p>
+                </div>
+                <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+              </div>
+            </div>
+          
+            <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+              <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+                <div class="my-3 p-3">
+                  <h2 class="display-5">Preletor 3</h2>
+                  <p class="lead">----.</p>
+                </div>
+                <div class="bg-dark shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+              </div>
+              <div class="bg-primary me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+                <div class="my-3 py-3">
+                  <h2 class="display-5">Comunhão</h2>
+                </div>
+                <div class="bg-light shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+              </div>
+            </div>
+          
+            <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+              <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+                <div class="my-3 p-3">
+                  <h2 class="display-5">Lazer</h2>
+                </div>
+                <div class="bg-body shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+              </div>
+              <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+                <div class="my-3 py-3">
+                  <h2 class="display-5">Palavra</h2>
+                </div>
+                <div class="bg-body shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+              </div>
+            </div>
+          
+            <div class="d-md-flex flex-md-equal w-100 my-md-2 ps-md-2">
+              <div class="bg-light me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+                <div class="my-3 p-3">
+                  <h2 class="display-5">Adoração</h2>
+                </div>
+                <div class="bg-body shadow-sm mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+              </div>
+            </div>
+          </main>
 </div>
 <%- include("partials/end.ejs") %>
