--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/headAdmin.ejs") %>
+<%- include("partials/head.ejs") %>
 <div class="container">
     <div class="row admin__titulo">
         <div class="col-md-8" id="titulo">
@@ -119,4 +119,5 @@
   </div>
 </div>
 
+<%- include("partials/scripts.ejs") %>
 <%- include("partials/end.ejs") %>
