--- a/views/inscricoes/index.ejs
+++ b/views/inscricoes/index.ejs
@@ -20,6 +20,7 @@
                   <li>Inicio: 01 DE SET DE 2023</li>
                   <li>Fim: 30 DE SET DE 2023</li>
                   <li>DISPONIVEL</li>
+                  <li style="font-size: 0.7em;">*Devido a custo de pagamentos via link, os valores terão uma leve alteração no momento do pagamento.</li>
                 </ul>
                 <button type="button" onclick="handleShowModal()" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">GARANTA O SEU!</button>
               </div>
@@ -37,13 +38,14 @@
                   <li>Inicio: 01 DE OUT DE 2023</li>
                   <li>Fim: 31 DE OUT DE 2023</li>
                   <li>INDISPONIVEL</li>
+                  <li style="font-size: 0.7em;">*Devido a custo de pagamentos via link, os valores terão uma leve alteração no momento do pagamento.</li>
                 </ul>
                 <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">EM BREVE!</button>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card mb-4 rounded-3 shadow-sm border-primary">
+            <div class="card mb-4 rounded-3 shadow-sm">
               <div class="card-header py-3 text-white bg-dark border-dark">
                 <h4 class="my-0 fw-normal">3º Lote</h4>
               </div>
@@ -54,6 +56,7 @@
                     <li>Inicio: 01 DE NOV DE 2023</li>
                     <li>Fim: 30 DE NOV DE 2023</li>
                     <li>INDISPONIVEL</li>
+                    <li style="font-size: 0.7em;">*Devido a custo de pagamentos via link, os valores terão uma leve alteração no momento do pagamento.</li>
                 </ul>
                 <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">EM BREVE!</button>
               </div>
