--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -5,6 +5,7 @@
 <script src="/js/script.js"></script>
 <script src="/js/toastRetorno.js"></script>
 <script src="/js/submit.js"></script>
+<script src="/js/admin/scadmin.js" defer="defer"></script>
 
 
 <script>
