--- a/views/inscricoes/index.ejs
+++ b/views/inscricoes/index.ejs
@@ -10,25 +10,25 @@
         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3 text-white bg-primary border-primary">
+              <div class="card-header py-3 text-white bg-secondary border-secondary">
                 <h4 class="my-0 fw-normal">1º Lote</h4>
               </div>
               <div class="card-body">
-                <h1 class="card-title pricing-card-title">R$ 140,00<small class="text-muted fw-light"></small></h1>
-                <ul class="list-unstyled mt-3 mb-4">
+                <h1 class="card-title pricing-card-title text-secondary">R$ 140,00<small class="text-muted fw-light"></small></h1>
+                <ul class="list-unstyled mt-3 mb-4 text-secondary">
                   <li>L I M I T A D O</li>
                   <li>Inicio: 01 DE SET DE 2023</li>
                   <li>Fim: 30 DE SET DE 2023</li>
                   <li>DISPONIVEL</li>
                   <li style="font-size: 0.7em;">*Devido a custo de pagamentos via link, os valores terão uma leve alteração no momento do pagamento.</li>
                 </ul>
-                <button type="button" onclick="handleShowModal()" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">GARANTA O SEU!</button>
+                <button type="button" class="w-100 btn btn-lg btn-outline-danger disabled">ENCERRADO!</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
-              <div class="card-header py-3 text-white bg-dark border-dark">
+              <div class="card-header py-3 text-white bg-primary border-primary">
                 <h4 class="my-0 fw-normal">2º Lote</h4>
               </div>
               <div class="card-body">
@@ -40,7 +40,7 @@
                   <li>INDISPONIVEL</li>
                   <li style="font-size: 0.7em;">*Devido a custo de pagamentos via link, os valores terão uma leve alteração no momento do pagamento.</li>
                 </ul>
-                <button type="button" class="w-100 btn btn-lg btn-outline-primary disabled">EM BREVE!</button>
+                <button type="button" onclick="handleShowModal()" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">GARANTA O SEU!</button>
               </div>
             </div>
           </div>
