Vagas limitas na homme

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
             <div class="col-md-4 info__texto__deals info__calendario">
                 <a href="/inscricoes"><img class="deals__img" src="img/icones/inscricao.png" alt=""></a>
                 <h3>I N S C R I Ç Õ E S</h3>
-                <P>Garanta sua pulseira! Vagas ilimitadas!.</P>
+                <P>Garanta sua pulseira! Vagas limitadas!.</P>
             </div>
         </div>
     </div>
