--- a/views/inscricoes/index.ejs
+++ b/views/inscricoes/index.ejs
@@ -36,7 +36,7 @@
                 <ul class="list-unstyled mt-3 mb-4">
                   <li>LIMITADO</li>
                   <li>Inicio: 01 DE OUT DE 2023</li>
-                  <li>Fim: 31 DE OUT DE 2023</li>
+                  <li>Fim: 15 DE NOV DE 2023</li>
                   <li>INDISPONIVEL</li>
                   <li style="font-size: 0.7em;">*Devido a custo de pagamentos via link, os valores terão uma leve alteração no momento do pagamento.</li>
                 </ul>
@@ -53,7 +53,7 @@
                 <h1 class="card-title pricing-card-title">R$ 160,00<small class="text-muted fw-light"></small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
                     <li>LIMITADO</li>
-                    <li>Inicio: 01 DE NOV DE 2023</li>
+                    <li>Inicio: 15 DE NOV DE 2023</li>
                     <li>Fim: 30 DE NOV DE 2023</li>
                     <li>INDISPONIVEL</li>
                     <li style="font-size: 0.7em;">*Devido a custo de pagamentos via link, os valores terão uma leve alteração no momento do pagamento.</li>
