alterar valor meia

--- a/views/inscricoes/modal.ejs
+++ b/views/inscricoes/modal.ejs
@@ -35,8 +35,8 @@
             <div class="mb-3">
               <label for="isMeia" class="form-label">Tipo</label>
               <select name="isMeia" onchange="handleAddIsMeia(this.value)" id="isMeia" class="form-select">
-                <option value="false" selected>Inteira</option>
-                <option value="true">Meia</option>
+                <option value="false" selected>Inteira (A partir de 11 anos)</option>
+                <option value="true">Meia (7 a 10 anos)</option>
               </select>
             </div>
             <div id="form_afiliados" class="mb-3">
